Remove background images

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-image: url(./fifa.png);
-  background-size: cover;">
+  <!-- <body style="background-image: url(./fifa.png);
+  background-size: cover;"> -->
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
